# cpp-doom

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  doxyfile
cmake/: PrecompiledHeaders.cmake
midiproc/: buffer.cpp  main.cpp
opl/: ioperm_sys.cpp  opl.cpp  opl_linux.cpp  opl_obsd.cpp  opl_queue.cpp  opl_sdl.cpp  opl_timer.cpp  opl_win32.cpp
opl/examples/: droplay.cpp
pcsound/: pcsound.cpp  pcsound_bsd.cpp  pcsound_linux.cpp  pcsound_sdl.cpp
src/: CMakeLists.txt  aes_prng.cpp  common.cpp  common.hpp  config.hpp  crispy.cpp  crispy.hpp  d_dedicated.cpp  d_event.cpp  d_event.hpp  d_iwad.cpp  d_iwad.hpp  d_loop.cpp  d_loop.hpp  d_mode.cpp  d_mode.hpp  d_ticcmd.hpp  deh_defs.hpp  deh_io.cpp  deh_io.hpp  deh_main.cpp  deh_main.hpp  deh_mapping.cpp  deh_mapping.hpp  deh_str.cpp  deh_str.hpp  deh_text.cpp  doomtype.hpp  gusconf.cpp  i_cdmus.cpp  i_endoom.cpp  i_endoom.hpp  i_glob.cpp  i_input.cpp  i_joystick.cpp  i_main.cpp  i_midipipe.cpp  i_midipipe.hpp  i_musicpack.cpp  i_oplmusic.cpp  (+70 more)
src/build-info/: b_main.cpp  b_main.hpp  compiler_feature.cpp  compiler_feature.hpp  config.cpp  config.hpp  cxx-attributes.cpp  cxx-attributes.hpp  cxx.cpp  cxx.hpp  cxx11.cpp  cxx11.hpp  cxx14.cpp  cxx14.hpp  cxx17.cpp  cxx17.hpp  cxx20.cpp  cxx20.hpp  cxx23.cpp  cxx23.hpp
src/doom/: CMakeLists.txt  am_map.cpp  am_map.hpp  d_englsh.hpp  d_items.cpp  d_items.hpp  d_main.cpp  d_net.cpp  d_player.hpp  d_textur.hpp  d_think.hpp  deh_ammo.cpp  deh_bexincl.cpp  deh_bexpars.cpp  deh_bexptr.cpp  deh_bexstr.cpp  deh_cheat.cpp  deh_doom.cpp  deh_frame.cpp  deh_misc.cpp  deh_ptr.cpp  deh_sound.cpp  deh_thing.cpp  deh_weapon.cpp  doomdata.hpp  doomdef.hpp  doomstat.cpp  doomstat.hpp  f_finale.cpp  f_finale.hpp  f_wipe.cpp  f_wipe.hpp  g_game.cpp  g_game.hpp  globals_doom.cpp  globals_doom.hpp  hu_lib.cpp  hu_lib.hpp  hu_stuff.cpp  hu_stuff.hpp  (+66 more)
src/heretic/: CMakeLists.txt  am_map.cpp  ct_chat.cpp  d_main.cpp  d_net.cpp  deh_ammo.cpp  deh_frame.cpp  deh_htext.cpp  deh_htic.cpp  deh_sound.cpp  deh_weapon.cpp  doomdata.hpp  doomdef.hpp  f_finale.cpp  g_game.cpp  in_lude.cpp  info.cpp  info.hpp  mn_menu.cpp  p_action.hpp  p_enemy.cpp  p_map.cpp  p_mobj.cpp  p_plats.cpp  p_pspr.cpp  p_saveg.cpp  p_setup.cpp  p_sight.cpp  p_tick.cpp  p_user.cpp  r_data.cpp  r_draw.cpp  r_local.hpp  r_main.cpp  r_plane.cpp  r_segs.cpp  r_things.cpp  s_sound.cpp  sb_bar.cpp  sounds.hpp
src/hexen/: am_map.cpp  ct_chat.cpp  d_net.cpp  f_finale.cpp  g_game.cpp  h2_main.cpp  h2def.hpp  in_lude.cpp  info.cpp  mn_menu.cpp  p_acs.cpp  p_ceilng.cpp  p_doors.cpp  p_enemy.cpp  p_floor.cpp  p_inter.cpp  p_lights.cpp  p_map.cpp  p_mobj.cpp  p_plats.cpp  p_pspr.cpp  p_setup.cpp  p_spec.cpp  p_tick.cpp  p_user.cpp  po_man.cpp  r_data.cpp  r_draw.cpp  r_local.hpp  r_main.cpp  r_plane.cpp  r_segs.cpp  r_things.cpp  s_sound.cpp  sb_bar.cpp  sn_sonix.cpp  st_start.cpp  sv_save.cpp
src/setup/: CMakeLists.txt  compatibility.cpp  display.cpp  execute.cpp  execute.hpp  joystick.cpp  keyboard.cpp  mainmenu.cpp  mode.cpp  mouse.cpp  multiplayer.cpp  sound.cpp  txt_joyaxis.cpp  txt_joyaxis.hpp  txt_joybinput.cpp  txt_joybinput.hpp  txt_keyinput.cpp  txt_keyinput.hpp  txt_mouseinput.cpp  txt_mouseinput.hpp
src/strife/: am_map.cpp  d_main.cpp  d_net.cpp  deh_cheat.cpp  deh_frame.cpp  deh_ptr.cpp  deh_weapon.cpp  f_finale.cpp  f_wipe.cpp  g_game.cpp  hu_stuff.cpp  info.cpp  info.hpp  m_menu.cpp  m_saves.cpp  p_ceilng.cpp  p_dialog.cpp  p_dialog.hpp  p_doors.cpp  p_enemy.cpp  p_floor.cpp  p_lights.cpp  p_map.cpp  p_maputl.cpp  p_mobj.cpp  p_plats.cpp  p_pspr.cpp  p_saveg.cpp  p_setup.cpp  p_spec.cpp  p_switch.cpp  p_user.cpp  r_data.cpp  r_draw.cpp  r_main.cpp  r_plane.cpp  r_segs.cpp  r_things.cpp  s_sound.cpp  st_lib.cpp  (+2 more)
src/test/: CMakeLists.txt  d_iwad_test.hpp  test-all.hpp  test-d_event.hpp  test-fmt.hpp  test-m_argv.hpp  test1.cpp
textscreen/: txt_button.cpp  txt_button.hpp  txt_checkbox.cpp  txt_checkbox.hpp  txt_conditional.cpp  txt_conditional.hpp  txt_desktop.cpp  txt_dropdown.cpp  txt_dropdown.hpp  txt_fileselect.cpp  txt_gui.cpp  txt_inputbox.cpp  txt_inputbox.hpp  txt_io.cpp  txt_label.cpp  txt_label.hpp  txt_radiobutton.cpp  txt_radiobutton.hpp  txt_scrollpane.cpp  txt_scrollpane.hpp  txt_sdl.cpp  txt_sdl.hpp  txt_separator.cpp  txt_separator.hpp  txt_spinctrl.cpp  txt_spinctrl.hpp  txt_strut.cpp  txt_strut.hpp  txt_table.cpp  txt_table.hpp  txt_widget.cpp  txt_widget.hpp  txt_window.cpp  txt_window.hpp  txt_window_action.cpp  txt_window_action.hpp
textscreen/examples/: calculator.cpp  guitest.cpp
utils/: lump.hpp  memory.hpp
win32/: win_opendir.cpp
